crates/parser/tests/parser/snapshots/main__parser__parser_tests__opaque_type.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Opaque
      visibility: Opaque
      type_params: []
      kind:
        Record:
          fields:
            - - inner
              - Named:
                  name: Int
                  span:
                    - 34
                    - 37
      deriving: []
      doc: ~
      span:
        - 0
        - 39
