crates/parser/tests/parser/snapshots/main__parser__parser_tests__pub_import_multiple.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - Import:
      platform: ~
      is_pub: true
      path: core/option
      names:
        - name: Option
          alias: ~
        - name: Some
          alias: ~
        - name: None
          alias: ~
      span:
        - 0
        - 43
  - Import:
      platform: ~
      is_pub: true
      path: core/result
      names:
        - name: Result
          alias: ~
      span:
        - 44
        - 75
