crates/parser/tests/parser/snapshots/main__parser__parser_tests__pub_open_type.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Color
      visibility: Pub
      type_params: []
      kind:
        Sum:
          variants:
            - name: Red
              fields: []
              span:
                - 17
                - 20
            - name: Green
              fields: []
              span:
                - 23
                - 28
            - name: Blue
              fields: []
              span:
                - 31
                - 35
      deriving: []
      doc: ~
      span:
        - 0
        - 35
