crates/parser/tests/parser/snapshots/main__parser__parser_tests__question_mark.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params:
        - name: x
          ty:
            App:
              name: Option
              args:
                - Named:
                    name: Int
                    span:
                      - 16
                      - 19
              span:
                - 9
                - 20
          mode: Consume
          span:
            - 6
            - 20
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 25
            - 28
      body:
        QuestionMark:
          expr:
            Var:
              name: x
              span:
                - 31
                - 32
          span:
            - 31
            - 33
      doc: ~
      span:
        - 0
        - 33
