crates/parser/tests/parser/snapshots/main__parser__parser_tests__record_type.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 18
                    - 21
            - - y
              - Named:
                  name: Int
                  span:
                    - 26
                    - 29
      deriving: []
      doc: ~
      span:
        - 0
        - 31
