crates/parser/tests/parser/snapshots/main__parser__parser_tests__struct_literal.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 18
                    - 21
            - - y
              - Named:
                  name: Int
                  span:
                    - 26
                    - 29
      deriving: []
      span:
        - 0
        - 31
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Point
          span:
            - 43
            - 48
      body:
        StructLit:
          name: Point
          fields:
            - - x
              - Lit:
                  value:
                    Int: 1
                  span:
                    - 63
                    - 64
            - - y
              - Lit:
                  value:
                    Int: 2
                  span:
                    - 70
                    - 71
          span:
            - 51
            - 73
      span:
        - 32
        - 73
