crates/parser/tests/parser/snapshots/main__parser__parser_tests__sum_type.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Option
      visibility: Private
      type_params:
        - a
      kind:
        Sum:
          variants:
            - name: Some
              fields:
                - Var:
                    name: a
                    span:
                      - 22
                      - 23
              span:
                - 17
                - 24
            - name: None
              fields: []
              span:
                - 27
                - 31
      deriving: []
      doc: ~
      span:
        - 0
        - 31
