crates/parser/tests/parser/snapshots/main__parser__parser_tests__trait_decl_with_superclass.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefTrait:
      platform: ~
      visibility: Private
      name: Ord
      type_params:
        - name: a
          arity: 0
          span:
            - 10
            - 11
      superclasses:
        - trait_name: Eq
          type_args:
            - Var:
                name: a
                span:
                  - 19
                  - 20
          span:
            - 19
            - 24
      methods:
        - platform: ~
          name: compare
          visibility: Private
          type_params: []
          params:
            - name: x
              ty:
                Var:
                  name: a
                  span:
                    - 42
                    - 43
              span:
                - 39
                - 43
            - name: y
              ty:
                Var:
                  name: a
                  span:
                    - 48
                    - 49
              span:
                - 45
                - 49
          constraints: []
          return_type:
            Named:
              name: Ordering
              span:
                - 54
                - 62
          body:
            Lit:
              value: Unit
              span:
                - 27
                - 62
          span:
            - 27
            - 62
      span:
        - 0
        - 64
